# QT_Task2

./: CMakeLists.txt  main.cpp
